--- a/app/templates/external_data/analyst_coverage.html
+++ b/app/templates/external_data/analyst_coverage.html
@@ -111,12 +111,7 @@
                         <p class="mb-0">Profesjonelle analyser og anbefalinger fra ledende investeringsbanker</p>
                     </div>
                     <div class="col-md-4 text-end">
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-light active" data-filter="all">Alle</button>
-                            <button type="button" class="btn btn-outline-light" data-filter="buy">Buy</button>
-                            <button type="button" class="btn btn-outline-light" data-filter="hold">Hold</button>
-                            <button type="button" class="btn btn-outline-light" data-filter="sell">Sell</button>
-                        </div>
+                        {# Fjernet Buy/Hold/Sell filterknapper etter krav #}
                     </div>
                 </div>
             </div>
